apply plugin: 'com.android.application'

android {
    signingConfigs {
        test {
            storeFile file('/Users/echo/Downloads/project/Potent/keyNew.jks')
            storePassword 'shilei19921225'
            keyAlias 'key0'
            keyPassword 'shilei19921225'
        }
        release {
            storeFile file("/Users/yangqingjie/Desktop/key/my-release-key.jks")
            storePassword "android"
            keyAlias "my-key-alias"
            keyPassword "android"
        }
    }
    compileSdkVersion 34
    defaultConfig {
        applicationId 'com.potent.myspeedz'
        minSdkVersion 24
        targetSdkVersion 34
        versionCode 1600
        versionName '1.0.5'
    }
    buildTypes {
        release {
//            runProguard false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
            signingConfig signingConfigs.release
        }
    }
    productFlavors {
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    namespace 'com.potent'
    tasks.withType(JavaCompile).configureEach{
        options.fork = true
        options.forkOptions.jvmArgs +=[
                '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']
    }
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation project(':EventBus')
    implementation project(':MPChartLib')
    implementation project(':Appmsg')
    implementation 'com.jakewharton:butterknife:10.2.1'
    implementation 'androidx.recyclerview:recyclerview:1.1.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
    implementation 'androidx.viewpager:viewpager:1.0.0'
    implementation 'androidx.fragment:fragment:1.2.4'
    api files('libs/ormlite-android-4.41.jar')
    api files('libs/ormlite-core-4.41.jar')
    implementation project(':Library_Expandablelayout')
    implementation project(':Library_AndroidSwipeLayout')
    implementation 'com.gitee.zhang-yanqiang:easypermission:v2.0.15'
    implementation 'androidx.annotation:annotation:1.0.0'

}
